# RobotHexapodControl

./: CMakeLists.txt  Makefile  README.md  package.json
include/: board.hpp  body.hpp  cmdServo.hpp  communication.hpp  leftBackLeg.hpp  leftFrontLeg.hpp  leftMiddleLeg.hpp  leg.hpp  rightBackLeg.hpp  rightFrontLeg.hpp  rightMiddleLeg.hpp  robotHexapod.hpp  robotOverallMove.hpp  sendData.hpp
log/: errorDebug.txt
src/: board.cpp  body.cpp  cmdServo.cpp  communication.cpp  leftBackLeg.cpp  leftFrontLeg.cpp  leftMiddleLeg.cpp  leg.cpp  main.cpp  rightBackLeg.cpp  rightFrontLeg.cpp  rightMiddleLeg.cpp  robotHexapod.cpp  robotOverallMove.cpp
